fixed line overlap

--- a/src/views/Home/components/Schedule/schedule.scss
+++ b/src/views/Home/components/Schedule/schedule.scss
@@ -28,7 +28,7 @@
   &__schedule {
     position: relative;
     width: 75%;
-    min-width: min(500px, 70vw);
+    min-width: max(314.25px, 70vw);
     max-width: 1000px;
     min-height: auto;
     height: fit-content;
@@ -48,7 +48,7 @@
   &__whiteRect {
     padding-top: 68%;
     width: 100%;
-    height: auto;
+    height: fit-content;
     position: absolute;
     background: var(--white__off);
     box-shadow: 0 0 20px 11px rgba(89, 93, 130, 0.5);
@@ -115,7 +115,19 @@
   &__event {
     width: 100%;
     position: relative;
+    border-bottom: 1px solid var(--grey__dark);
     height: 3em;
+
+    &--variant {
+      border-bottom: 1px dotted var(--grey__dark);
+    }
+  }
+
+  &__event:last-child {
+    width: 100%;
+    position: relative;
+    height: 3em;
+    border-bottom: none;
   }
 
   &__eventText {
@@ -219,32 +231,6 @@
     height: 0.5vh;
     top: calc(18% + 2.3vh);
     z-index: 1;
-  }
-
-  &__divider {
-    position: absolute;
-    background: linear-gradient(
-      90deg,
-      var(--grey__dark) 91.73%,
-      rgba(137, 137, 137, 0) 100%
-    );
-    min-width: 100%;
-    height: 1px;
-    bottom: -4px;
-    margin-bottom: 5px;
-
-    @include responsiveness.respond(smallest) {
-      bottom: -6px;
-      margin-bottom: 4px;
-    }
-
-    &--variant {
-      background: linear-gradient(
-        270deg,
-        var(--grey__dark) 10%,
-        rgba(180, 180, 180, 0) 100%
-      );
-    }
   }
 
   &__moon {
